--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,41 @@
-/* You can add global styles to this file, and also import other style files */
+@import '~@angular/material/theming';
+@import 'variables.scss';
+@include mat-core();
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+$primary: mat-palette($mat-purple);
+$accent:  mat-palette($mat-green);
+$warn:    mat-palette($mat-red);
+
+$theme: mat-light-theme($primary, $accent, $warn);
+
+@include angular-material-theme($theme);
+
+html,
+body {
+  min-height: 100%;
+  height: 100%;
+}
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+app-root {
+  width: 100%;
+  height: 100%;
+  min-height: 100%;
+  display: block;
+}
+
+app-home,
+app-admin {
+  display: block;
+  min-height: 100%;
+  height: 100%;
+}
+
+app-admin {
+  background-color: #303030;
+}
+
+
