--- a/src/styles.scss
+++ b/src/styles.scss
@@ -49,6 +49,10 @@ app-admin {
   margin-left: auto;
 }
 
+.auth-backdrop {
+  background-color: lighten(black, 15%);
+}
+
 @media (min-width: 768px) {
   .container {
     width: 750px;
