--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,62 +1,57 @@
-<div fxFill>
-  <mat-toolbar color="primary">
-    <mat-toolbar-row>
-      <span>{{title}}</span>
-    </mat-toolbar-row>
-  </mat-toolbar>
-  <div class="container">
-    <div class="action-container" fxLayout="row" fxLayoutGap="16px">
-      <mat-form-field fxFlex>
-        <mat-label>Filter</mat-label>
-        <input matInput (keyup)="applyFilter($event)" placeholder="Ex. Braxton Brewery" #input>
-      </mat-form-field>
-      <div>
-        <button mat-flat-button color="primary">Force Refresh</button>
-      </div>
+
+<mat-toolbar color="primary" *ngIf="isLoggedIn">
+  <mat-toolbar-row>
+    <img src="/assets/icons/icon-72x72.png" />
+    <span>{{title}}</span>
+  </mat-toolbar-row>
+</mat-toolbar>
+<div class="container" *ngIf="isLoggedIn">
+  <div class="action-container" fxLayout="row" fxLayoutGap="16px">
+    <mat-form-field fxFlex>
+      <mat-label>Filter</mat-label>
+      <input matInput (keyup)="applyFilter($event)" placeholder="Ex. Braxton Brewery" #input>
+    </mat-form-field>
+    <div>
+      <button mat-flat-button color="primary">Force Refresh</button>
     </div>
-    <div class="table-container">
-      <table mat-table matSort multiTemplateDataRows [dataSource]="dataSource" class="mat-elevation-z8" matSortDirection="desc">
-
-        <!-- Name Column -->
-        <ng-container matColumnDef="name">
-          <th mat-header-cell mat-sort-header *matHeaderCellDef> Name </th>
-          <td mat-cell *matCellDef="let element"> {{element.name}} </td>
-        </ng-container>
-
-        <!-- Date Column -->
-        <ng-container matColumnDef="date">
-          <th mat-header-cell mat-sort-header *matHeaderCellDef> Last Visited </th>
-          <td mat-cell *matCellDef="let element"> {{element.lastUpdated}} </td>
-        </ng-container>
-
-        <ng-container matColumnDef="expandedDetail">
-          <td mat-cell *matCellDef="let element" [attr.colspan]="columns.length">
-            <div class="brewery-timeline" [@detailExpand]="element == expandedElement ? 'expanded' : 'collapsed'" fxLayout="column">
-              <span><h4 class="timeline-title">Your Visits</h4></span>
-              <div *ngFor="let item of timeline$ | async">
-                <div fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="16px" class="timeline">
-                  <button mat-mini-fab color="accent">
-                    <mat-icon>event</mat-icon>
-                  </button>
-                  <div fxLayout="column" fxFlex>
-                    <h4>{{item.display.title}}</h4>
-                    <p>{{item.display.start}} - {{item.display.end}} &bull; {{item.display.duration}}</p>
-                  </div>
+  </div>
+  <div class="table-container">
+    <table mat-table matSort multiTemplateDataRows [dataSource]="dataSource" class="mat-elevation-z8" matSortDirection="desc">
+      <!-- Name Column -->
+      <ng-container matColumnDef="name">
+        <th mat-header-cell mat-sort-header *matHeaderCellDef> Name </th>
+        <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+      </ng-container>
+      <!-- Date Column -->
+      <ng-container matColumnDef="date">
+        <th mat-header-cell mat-sort-header *matHeaderCellDef> Last Visited </th>
+        <td mat-cell *matCellDef="let element"> {{element.lastUpdated}} </td>
+      </ng-container>
+      <ng-container matColumnDef="expandedDetail">
+        <td mat-cell *matCellDef="let element" [attr.colspan]="columns.length">
+          <div class="brewery-timeline" [@detailExpand]="element == expandedElement ? 'expanded' : 'collapsed'" fxLayout="column">
+            <span><h4 class="timeline-title">Your Visits</h4></span>
+            <div *ngFor="let item of timeline$ | async">
+              <div fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="16px" class="timeline">
+                <button mat-mini-fab color="accent">
+                  <mat-icon>event</mat-icon>
+                </button>
+                <div fxLayout="column" fxFlex>
+                  <h4>{{item.display.title}}</h4>
+                  <p>{{item.display.start}} - {{item.display.end}} &bull; {{item.display.duration}}</p>
                 </div>
               </div>
             </div>
-          </td>
-        </ng-container>
-
-        <tr mat-header-row *matHeaderRowDef="columns; sticky: true"></tr>
-        <tr mat-row *matRowDef="let element; columns: columns;" (click)="getExpandedElement(element)" class="row"></tr>
-        <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="detail-row"></tr>
-
-        <tr class="mat-row" *matNoDataRow>
-          <td class="mat-cell" colspan="4">No brewery matching the filter "{{input.value}}"</td>
-        </tr>
-      </table>
-    </div>
-    <mat-paginator [pageSizeOptions]="[15, 25, 50, 100]"></mat-paginator>
+          </div>
+        </td>
+      </ng-container>
+      <tr mat-header-row *matHeaderRowDef="columns; sticky: true"></tr>
+      <tr mat-row *matRowDef="let element; columns: columns;" (click)="getExpandedElement(element)" class="row"></tr>
+      <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="detail-row"></tr>
+      <tr class="mat-row" *matNoDataRow>
+        <td class="mat-cell" colspan="4">No brewery matching the filter "{{input.value}}"</td>
+      </tr>
+    </table>
   </div>
+  <mat-paginator [pageSizeOptions]="[15, 25, 50, 100]"></mat-paginator>
 </div>
