--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -3,6 +3,10 @@
   <mat-toolbar-row>
     <img src="/assets/icons/icon-72x72.png" />
     <span>{{title}}</span>
+    <span class="spacer"></span>
+    <button mat-icon-button *ngIf="(reviews$ | async) as reviews" (click)="openReviews(reviews)">
+      <mat-icon [matBadge]="reviews.length" [matBadgeHidden]="reviews.length == 0" matBadgeColor="warn">notifications_none</mat-icon>
+    </button>
   </mat-toolbar-row>
 </mat-toolbar>
 <div class="container" *ngIf="isLoggedIn">
