--- a/src/styles.scss
+++ b/src/styles.scss
@@ -49,8 +49,17 @@ app-admin {
   margin-left: auto;
 }
 
+.center {
+  text-align: center;
+  margin: 0 auto;
+}
+
 .auth-backdrop {
   background-color: lighten(black, 15%);
+}
+
+app-reviews-dialog .mat-list-item-content {
+  padding: 0 !important;
 }
 
 @media (min-width: 768px) {
