--- a/src/styles.scss
+++ b/src/styles.scss
@@ -42,6 +42,10 @@ app-admin {
   color: white !important;
 }
 
+.spacer {
+  flex: 1 1 auto;
+}
+
 .container {
   padding-right: 15px;
   padding-left: 15px;
