--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -16,7 +16,7 @@
       <input matInput (keyup)="applyFilter($event)" placeholder="Ex. Braxton Brewery" #input>
     </mat-form-field>
     <div>
-      <button mat-flat-button color="primary">Force Refresh</button>
+      <button mat-flat-button color="primary" (click)="refresh()">Force Refresh</button>
     </div>
   </div>
   <div class="table-container">
@@ -58,4 +58,7 @@
     </table>
   </div>
   <mat-paginator [pageSizeOptions]="[15, 25, 50, 100]"></mat-paginator>
+  <div class="loading-spinner" *ngIf="isLoading">
+    <mat-spinner color="accent"></mat-spinner>
+  </div>
 </div>
