Add CRUD for brewery timeline ✍🏾⏳

--- a/src/app/admin/alert/alert-dialog.component.html
+++ b/src/app/admin/alert/alert-dialog.component.html
@@ -3,7 +3,7 @@
   <span>Braxton's Beer Alert</span>
 </h2>
 <mat-dialog-content>
-  <p>You are about to force the brewery app to to register your location?</p>
+  <p>{{data.msg}}</p>
 </mat-dialog-content>
 <div align="end" mat-dialog-actions>
   <button mat-button mat-raised-button mat-dialog-close color="primary">Cancel</button>
