--- a/src/styles.scss
+++ b/src/styles.scss
@@ -66,6 +66,14 @@ app-reviews-dialog .mat-list-item-content {
   padding: 0 !important;
 }
 
+.timepicker-backdrop-overlay{
+  z-index: 1000 !important;
+}
+
+.timepicker-overlay{
+  z-index: 1000 !important;
+}
+
 @media (min-width: 768px) {
   .container {
     width: 750px;
