--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -33,16 +33,31 @@
       </ng-container>
       <ng-container matColumnDef="expandedDetail">
         <td mat-cell *matCellDef="let element" [attr.colspan]="columns.length">
-          <div class="brewery-timeline" [@detailExpand]="element == expandedElement ? 'expanded' : 'collapsed'" fxLayout="column">
+          <div class="brewery-timeline" [@detailExpand]="element == expandedElement ? 'expanded' : 'collapsed'" fxLayout="column" *ngIf="(timeline$ | async) as timeline">
             <span><h4 class="timeline-title">Your Visits</h4></span>
-            <div *ngFor="let item of timeline$ | async">
+            <div *ngFor="let item of timeline; let i = index">
               <div fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="16px" class="timeline">
                 <button mat-mini-fab color="accent">
                   <mat-icon>event</mat-icon>
                 </button>
                 <div fxLayout="column" fxFlex>
-                  <h4>{{item.display.title}}</h4>
-                  <p>{{item.display.start}} - {{item.display.end}} &bull; {{item.display.duration}}</p>
+                  <h4>{{timelineDisplay[i].title}}</h4>
+                  <p>{{timelineDisplay[i].start}} - {{timelineDisplay[i].end}} &bull; {{timelineDisplay[i].duration}}</p>
+                </div>
+                <div>
+                  <button mat-icon-button [matMenuTriggerFor]="menu">
+                    <mat-icon>more_vert</mat-icon>
+                  </button>
+                  <mat-menu #menu="matMenu">
+                    <button mat-menu-item (click)="modifyTimeline(element, item, timeline)">
+                      <mat-icon>edit</mat-icon>
+                      <span>Modify</span>
+                    </button>
+                    <button mat-menu-item (click)="removeTimeline(element, item, timeline)">
+                      <mat-icon>delete</mat-icon>
+                      <span>Remove</span>
+                    </button>
+                  </mat-menu>
                 </div>
               </div>
             </div>
