--- a/src/app/admin/admin.component.scss
+++ b/src/app/admin/admin.component.scss
@@ -82,3 +82,9 @@ thead {
     transform: translate(-50%, -50%);
   }
 }
+
+eco-fab-speed-dial {
+  position: absolute;
+  bottom: 24px;
+  right: 24px;
+}
