--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -29,7 +29,9 @@
       <!-- Date Column -->
       <ng-container matColumnDef="date">
         <th mat-header-cell mat-sort-header *matHeaderCellDef> Last Visited </th>
-        <td mat-cell *matCellDef="let element"> {{element.lastUpdated}} </td>
+        <td mat-cell *matCellDef="let element">
+          <span *ngIf="element.updated">{{ element.updated }}</span>
+        </td>
       </ng-container>
       <ng-container matColumnDef="expandedDetail">
         <td mat-cell *matCellDef="let element" [attr.colspan]="columns.length">
@@ -52,6 +54,10 @@
                     <button mat-menu-item (click)="modifyTimeline(element, item, timeline)">
                       <mat-icon>edit</mat-icon>
                       <span>Modify</span>
+                    </button>
+                    <button mat-menu-item (click)="addTimeline(element)">
+                      <mat-icon>add</mat-icon>
+                      <span>Add</span>
                     </button>
                     <button mat-menu-item (click)="removeTimeline(element, item, timeline)">
                       <mat-icon>delete</mat-icon>
