--- a/src/app/admin/timeline/timeline-dialog.component.html
+++ b/src/app/admin/timeline/timeline-dialog.component.html
@@ -41,7 +41,7 @@
             <mat-icon>schedule</mat-icon>
           </button>
           <mat-error *ngIf="form.controls.startTime.errors?.required">Start Time is required</mat-error>
-          <ngx-material-timepicker #startTime [theme]="theme" [defaultTime]="defaultTime"></ngx-material-timepicker>
+          <ngx-material-timepicker #startTime [theme]="theme" [defaultTime]="defaultTimeStart"></ngx-material-timepicker>
         </mat-form-field>
         <mat-form-field appearance="outline" fxFlex="calc(50% - 4px)">
           <mat-label>End Time</mat-label>
@@ -50,7 +50,7 @@
             <mat-icon>schedule</mat-icon>
           </button>
           <mat-error *ngIf="form.controls.endTime.errors?.required">End Time is required</mat-error>
-          <ngx-material-timepicker #endTime [theme]="theme" [defaultTime]="defaultTime"></ngx-material-timepicker>
+          <ngx-material-timepicker #endTime [theme]="theme" [defaultTime]="defaultTimeEnd"></ngx-material-timepicker>
         </mat-form-field>
       </div>
     </div>
