--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -20,7 +20,7 @@
     </div>
   </div>
   <div class="table-container">
-    <table mat-table matSort multiTemplateDataRows [dataSource]="dataSource" class="mat-elevation-z8" matSortDirection="asc" matSortActive="updated">
+    <table mat-table matSort multiTemplateDataRows [dataSource]="dataSource" class="mat-elevation-z8" matSortDirection="desc" matSortActive="date">
       <!-- Name Column -->
       <ng-container matColumnDef="name">
         <th mat-header-cell mat-sort-header *matHeaderCellDef> Name </th>
