--- a/src/styles.scss
+++ b/src/styles.scss
@@ -32,7 +32,8 @@ app-root {
   height: 100%;
 }
 
-app-admin {
+app-admin,
+app-home {
   background-color: #303030;
   display: flex;
   flex-direction: column;
