--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -14,6 +14,7 @@
 h2 {
   font-size: 32px;
   color: white;
+  line-height: 42px;
   text-align: center;
 
   .underline {
@@ -28,4 +29,10 @@ p {
     margin-top: 8px;
     text-align: right;
   }
+}
+
+.mat-mini-fab {
+  position: absolute;
+  bottom: 24px;
+  right: 24px;
 }
