--- a/src/app/admin/brewery/brewery-dialog.component.html
+++ b/src/app/admin/brewery/brewery-dialog.component.html
@@ -1,5 +1,5 @@
 <form (ngSubmit)="save()" [formGroup]="form">
-  <h2 mat-dialog-title fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="8px">
+  <h2 mat-dialog-title class="flex-row flex-align-start-center flex-gap-8">
     <img src="/assets/icons/icon-72x72.png" />
     <span>Add A Brewery</span>
   </h2>
