--- a/src/app/admin/alert/alert-dialog.component.html
+++ b/src/app/admin/alert/alert-dialog.component.html
@@ -1,4 +1,4 @@
-<h2 mat-dialog-title fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="8px">
+<h2 mat-dialog-title class="flex-row flex-align-start-center flex-gap-8">
   <img src="/assets/icons/icon-72x72.png" />
   <span>Braxton's Beer Alert</span>
 </h2>
