--- a/src/app/admin/auth/auth-dialog.component.html
+++ b/src/app/admin/auth/auth-dialog.component.html
@@ -1,10 +1,10 @@
 <form (ngSubmit)="login()" [formGroup]="form">
-  <h2 mat-dialog-title fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="8px">
+  <h2 mat-dialog-title class="flex-row flex-align-start-center flex-gap-8">
     <img src="/assets/icons/icon-72x72.png" />
     <span>Admin Login</span>
   </h2>
   <mat-dialog-content>
-    <div fxLayout="column" fxLayoutGap="12px">
+    <div class="flex-column flex-gap-12">
       <mat-form-field appearance="outline">
         <mat-label>Email Address</mat-label>
         <input matInput formControlName="email" />
