--- a/src/app/admin/timeline/timeline-dialog.component.html
+++ b/src/app/admin/timeline/timeline-dialog.component.html
@@ -1,11 +1,11 @@
 <form (ngSubmit)="save()" [formGroup]="form">
-  <h2 mat-dialog-title fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="8px">
+  <h2 mat-dialog-title class="flex-row flex-align-start-center flex-gap-8">
     <img src="/assets/icons/icon-72x72.png" />
     <span *ngIf="!data.breweries">{{data.brewery.name}}</span>
     <span *ngIf="data.breweries">Add To Brewery Tiimeline</span>
   </h2>
   <mat-dialog-content>
-    <div fxLayout="column" fxLayoutGap="8px">
+    <div class="flex-column flex-gap-8">
         <mat-form-field style="padding-bottom:8px" *ngIf="data.breweries">
           <mat-label>Brewery</mat-label>
           <input type="text" matInput formControlName="brewery" [matAutocomplete]="auto">
@@ -18,15 +18,15 @@
             </mat-option>
           </mat-autocomplete>
         </mat-form-field>
-      <div fxLayout="row" fxLayoutGap="8px">
-        <mat-form-field appearance="outline" fxFlex="calc(50% - 4px)">
+      <div class="flex-row flex-gap-8">
+        <mat-form-field appearance="outline" class="flex-calc-50">
           <mat-label>Start Date</mat-label>
           <input matInput [matDatepicker]="pickerStart" formControlName="start" (dateChange)="onStartChange()" />
           <mat-error *ngIf="form.controls.start.errors?.required">Start Date is required</mat-error>
           <mat-datepicker #pickerStart></mat-datepicker>
           <mat-datepicker-toggle matSuffix [for]="pickerStart"></mat-datepicker-toggle>
         </mat-form-field>
-        <mat-form-field appearance="outline" fxFlex="calc(50% - 4px)">
+        <mat-form-field appearance="outline" class="flex-calc-50">
           <mat-label>End Date</mat-label>
           <input matInput [matDatepicker]="pickerEnd" formControlName="end" />
           <mat-error *ngIf="form.controls.end.errors?.required">Start Date is required</mat-error>
@@ -34,8 +34,8 @@
           <mat-datepicker-toggle matSuffix [for]="pickerEnd"></mat-datepicker-toggle>
         </mat-form-field>
       </div>
-      <div fxLayout="row" fxLayoutGap="8px">
-        <mat-form-field appearance="outline" fxFlex="calc(50% - 4px)">
+      <div class="flex-row flex-gap-8">
+        <mat-form-field appearance="outline" class="flex-calc-50">
           <mat-label>Start Time</mat-label>
           <input matInput [ngxTimepicker]="startTime" formControlName="startTime" readonly />
           <button matSuffix mat-icon-button type="button" (click)="startTime.open()">
@@ -44,7 +44,7 @@
           <mat-error *ngIf="form.controls.startTime.errors?.required">Start Time is required</mat-error>
           <ngx-material-timepicker #startTime [theme]="theme" [defaultTime]="defaultTimeStart"></ngx-material-timepicker>
         </mat-form-field>
-        <mat-form-field appearance="outline" fxFlex="calc(50% - 4px)">
+        <mat-form-field appearance="outline" class="flex-calc-50">
           <mat-label>End Time</mat-label>
           <input matInput [ngxTimepicker]="endTime" formControlName="endTime" readonly />
           <button matSuffix mat-icon-button type="button" (click)="endTime.open()">
